Cluster/central_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: central-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: central-app
  template:
    metadata:
      labels:
        app: central-app
    spec:
      containers:
        - name: central-lib-container
          image: kalinic/central_lib:latest
          ports:
            - containerPort: 9000
          # Add other configuration for your central-lib container if needed
        - name: mysql-db-container
          image: mysql:latest
          ports:
            - containerPort: 3306
          # Add other configuration for your MySQL container if needed
