Cluster/city_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: city-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: city-app
  template:
    metadata:
      labels:
        app: city-app
    spec:
      containers:
        - name: city-lib-container
          image: kalinic/city_lib:latest
          ports:
            - containerPort: 9001
        - name: postgres-db-container
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
