Cluster/central_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-app-service
spec:
  selector:
    app: central-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
