Cluster/city_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: city-app-service
spec:
  selector:
    app: city-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
      nodePort: 30000
